añadido docker para .net

--- a/TemplateApiCS2-main/webapi/appsettings.json
+++ b/TemplateApiCS2-main/webapi/appsettings.json
@@ -20,7 +20,7 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseContext": "server=localhost;user id=root;password=root;database=db"
+    "DatabaseContext": "server=mysql;user id=root;password=root;database=db"
   },
   "AllowedHosts": "*"
 }
