--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,5 +20,14 @@ services:
       - 8080:80
     volumes:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+  backend:
+    image: backend
+    container_name: backend
+    build: ./TemplateApiCS2-main
+    restart: always
+    ports:
+      - 8000:8000
+
+
 volumes:
   mysql:
