--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,10 +23,12 @@ services:
   backend:
     image: backend
     container_name: backend
-    build: ./TemplateApiCS2-main
+    build: ./backend
     restart: always
     ports:
       - 8000:8000
+    depends_on:
+      - db
 
 
 volumes:
