--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,6 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5",
     "node-fetch": "^3.3.1"
-  }
+  },
+  "start": "http-server -p 8888 -c-1 ./app"
 }
