--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,13 @@ services:
       MYSQL_DATABASE: db
     ports:
       - 3306:3306
+    expose:
+      - 3306
     volumes:
       - mysql:/var/lib/mysql
+    networks:
+      - default
+
   frontend:
     image: movieguesser
     container_name: frontend
@@ -20,6 +25,9 @@ services:
       - 8080:80
     volumes:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - default
+
   backend:
     image: backend
     container_name: backend
@@ -29,7 +37,12 @@ services:
       - 8000:8000
     depends_on:
       - db
+    networks:
+      - default
 
+
+networks:
+  default:
 
 volumes:
   mysql:
