--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.1"
 services:
-  db:
-    image: mysql:latest
+  mysql:
+    image: mysql:5.7
     container_name: mysql
     restart: always
     environment:
@@ -13,8 +13,7 @@ services:
       - 3306
     volumes:
       - mysql:/var/lib/mysql
-    networks:
-      - default
+
 
   frontend:
     image: movieguesser
@@ -25,8 +24,7 @@ services:
       - 8080:80
     volumes:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - default
+
 
   backend:
     image: backend
@@ -36,13 +34,9 @@ services:
     ports:
       - 8000:8000
     depends_on:
-      - db
-    networks:
-      - default
+      - mysql
 
 
-networks:
-  default:
 
 volumes:
   mysql:
