--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,11 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5",
     "node-fetch": "^3.3.1"
