--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -8,11 +8,10 @@ server {
     }
 
     location /peliculaById {
-       #proxy_set_header    Upgrade $http_upgrade;
-       #proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-       #proxy_set_header    X-Forwarded-Proto $scheme;    
-       #proxy_cache_bypass  $http_upgrade;
-       #proxy_pass_request_headers on;
+       proxy_pass          http://backend:3000;
+    }
+    
+    location /register {
        proxy_pass          http://backend:3000;
     }
 }
